dataset1235/2025-2/2868285114/users/1060082378/executions/3649835072_2132966528.log
== RUN (2025-08-19 22:16:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = ("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:18:41)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = yoU_Are_aMazIng
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:17:01)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = ("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:19:21)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
yoU_Are_aMazIngDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
yoU_Are_aMazIngMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
yoU_Are_aMazIngSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
yoU_Are_aMazIngBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
yoU_Are_aMazIngHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
yoU_Are_aMazIngPRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:53:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("fEz_o_l?")
s = input("Sim")
l = input("otAriOkKkk")
print(a.upper())
print(s.upper())
print(l.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    l = input("otAriOkKkk")
        ^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:18:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = "yoU_Are_aMazIng"
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:18:49)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = "yoU_Are_aMazIng"
print(texto.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:17:00)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = ("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:16:41)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = ("yoU_ Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ ARE_AMAZING
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:19:33)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
yoU_Are_aMazIngDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
yoU_Are_aMazIngMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
yoU_Are_aMazIngSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
yoU_Are_aMazIngBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
yoU_Are_aMazIngHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
yoU_Are_aMazIngPRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:52:34)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("fEz_o_l?")
texto2 = input("Sim")
texto3 = input("otAriOkKkk")
print(texto.upper())
print(texto2.upper())
print(texto3.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    texto3 = input("otAriOkKkk")
             ^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:53:37)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("fEz_o_l?")
s = input("Sim")
l = input("otAriOkKkk")
print(a.upper())
print(s.upper())
print(l.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    l = input("otAriOkKkk")
        ^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:16:59)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = ("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:54:22)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("fEz_o_l?")
print(a.upper())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
fEz_o_l?DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
fEz_o_l?MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
fEz_o_l?SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
fEz_o_l?BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
fEz_o_l?HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
fEz_o_l?PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:33:28)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("fEz_o_l?")
print(a.upper())

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
fEz_o_l?DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
fEz_o_l?MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
fEz_o_l?SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
fEz_o_l?BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
fEz_o_l?HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
fEz_o_l?PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:18:39)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = yoU_Are_aMazIng
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:18:37)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = yoU_Are_aMazIng
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:18:11)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
string(texto = "yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    string(texto = "yoU_Are_aMazIng")
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    string(texto = "yoU_Are_aMazIng")
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    string(texto = "yoU_Are_aMazIng")
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    string(texto = "yoU_Are_aMazIng")
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    string(texto = "yoU_Are_aMazIng")
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    string(texto = "yoU_Are_aMazIng")
    ^^^^^^
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:19:30)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
yoU_Are_aMazIngDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
yoU_Are_aMazIngMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
yoU_Are_aMazIngSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
yoU_Are_aMazIngBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
yoU_Are_aMazIngHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
yoU_Are_aMazIngPRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:53:39)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("fEz_o_l?")
s = input("Sim")
l = input("otAriOkKkk")
print(a.upper())
print(s.upper())
print(l.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    l = input("otAriOkKkk")
        ^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = input("Sim")
        ^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:18:36)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = yoU_Are_aMazIng
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:52:30)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("fEz_o_l?")
texto2 = input("Sim")
texto3 = input("otAriOkKkk")
print(texto.upper())
print(texto2.upper())
print(texto3.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    texto3 = input("otAriOkKkk")
             ^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:19:32)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
yoU_Are_aMazIngDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
yoU_Are_aMazIngMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
yoU_Are_aMazIngSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
yoU_Are_aMazIngBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
yoU_Are_aMazIngHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
yoU_Are_aMazIngPRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:54:24)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("fEz_o_l?")
print(a.upper())

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
fEz_o_l?DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
fEz_o_l?MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
fEz_o_l?SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
fEz_o_l?BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
fEz_o_l?HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
fEz_o_l?PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:16:57)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = ("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:52:27)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("fEz_o_l?")
texto2 = input("Sim")
texto3 = input("otAriOkKkk")
print(texto.upper())
print(texto2.upper())
print(texto3.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    texto3 = input("otAriOkKkk")
             ^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    texto2 = input("Sim")
             ^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:19:18)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
yoU_Are_aMazIngDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
yoU_Are_aMazIngMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
yoU_Are_aMazIngSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
yoU_Are_aMazIngBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
yoU_Are_aMazIngHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
yoU_Are_aMazIngPRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:16:50)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = ("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
YOU_ARE_AMAZING
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
YOU_ARE_AMAZING
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:18:38)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = yoU_Are_aMazIng
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = yoU_Are_aMazIng
            ^^^^^^^^^^^^^^^
NameError: name 'yoU_Are_aMazIng' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:33:22)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = input("fEz_o_l?")
print(a.upper())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
fEz_o_l?DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
fEz_o_l?MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
fEz_o_l?SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
fEz_o_l?BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
fEz_o_l?HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
fEz_o_l?PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:19:22)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input("yoU_Are_aMazIng")
print(texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
yoU_Are_aMazIngDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
yoU_Are_aMazIngMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
yoU_Are_aMazIngSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
yoU_Are_aMazIngBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
yoU_Are_aMazIngHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
yoU_Are_aMazIngPRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
